tests/snapshot/snapshots/snapshot__error_nested_annotated_record_pattern_typecheck_fail.ncl.snap
---
source: tests/snapshot/main.rs
expression: snapshot
---
error: incompatible types
  ┌─ [INPUTS_PATH]/errors/nested_annotated_record_pattern_typecheck_fail.ncl:2:43
  │
2 │   let { x = { a : Number }} = { x = { a = "" }} in
  │                                           ^^ this expression
  │
  = The type of the expression was expected to be `Number`
  = The type of the expression was inferred to be `String`
  = These types are not compatible


